change docker file